Changes for 4.2.0rc1

New features:

Bug fixes:
..F....... [ZBX-10397] fixed when global messaging severities unchecked if profile saved earlier (ashubin, vasilijs)
..F.I...S. [ZBX-15693] fixed widget default height in schema.tmpl (asestakovs)
A.F....... [ZBX-15596] fixed when widget in frontend can be created larger than API validation supports (ashubin, vasilijs)
..F....... [ZBX-15308] fixed timeselector in screens when page is opened with link containing sid argument (ashubin, gcalenko)
..F....... [ZBX-15694] fixed trimming of empty spaces for custom multiplier in item and item prototype preprocessing forms (Ivo)
..F....... [ZBX-15196] fixed "Follow redirects" checkbox not being enabled by default for HTTP agent in item, item prototype and LLD rule create forms (Ivo)
.......PS. [ZBX-15670] fixed inefficient vmware eventlog downloading (MVekslers)
..F....... [ZBX-15483] fixed undefined index in Item Prototype update (vasilijs)
..F....... [ZBX-15270] fixed graph widget configuration form cross browser issues (agriscenko)
..F....... [ZBX-15300] fixed widgets extra space at the bottom (ashubin, vasilijs)
...G...... [ZBX-8091] added alphabetic ordering of net.dns.record respond (akozlovs)
..F....... [ZBX-15707] fixed check box design when drag and drop an interface into SNMP (vasilijs)
..F....... [ZBX-15535] fixed validation of min/max value range in graph widget; fixed translation string in graph widget (miks)
..F....... [ZBX-15648] removed unused WIDGET_HAT_EVENTACTIONMCMDS and WIDGET_HAT_EVENTACTIONMSGS constants (agriscenko)
A.F....... [ZBX-15386] fixed Trigger overview not showing OK triggers (vasilijs)
A.F....... [ZBX-14538] fixed error message when value of lifetime or history/trends storage period is out of range (agriscenko)
A.F....... [ZBX-15614] fixed validation of y axis item on classic graph create and update (agriscenko)
..F....... [ZBX-15226] fixed missing visual gap under page title (gcalenko)